--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,7 @@
-# AWS Configuration
-AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=your_access_key
-AWS_SECRET_ACCESS_KEY=your_secret_key
-
 # Google Sheets Configuration
+GOOGLE_SHEETS_CREDENTIALS={"type": "service_account", ...} # Your service account JSON as a string
 SPREADSHEET_ID=your_spreadsheet_id
 SHEET_NAME=Sheet1
-GOOGLE_SHEETS_SECRET_NAME=google_sheets_credentials
 
-# App Configuration
+# Server Configuration
 PORT=8000
