--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 fastapi>=0.109.0
-mangum>=0.17.0
 google-auth>=2.27.0
 google-auth-oauthlib>=1.2.0
 google-auth-httplib2>=0.2.0
 google-api-python-client>=2.118.0
-boto3>=1.34.0
 python-dotenv>=1.0.0
 pydantic>=2.6.0
+waitress>=2.1.2
