--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ google-auth-httplib2>=0.2.0
 google-api-python-client>=2.118.0
 python-dotenv>=1.0.0
 pydantic>=2.6.0
-waitress>=2.1.2
+uvicorn>=0.27.0
