--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ google-api-python-client>=2.118.0
 python-dotenv>=1.0.0
 pydantic>=2.6.0
 uvicorn>=0.27.0
+
+qrcode[pil]==7.4.2
+pillow==10.0.0
+jinja2==3.1.2
